Login with User Role Switch and Authentications